Added planning poker links on the landing page

--- a/index.html
+++ b/index.html
@@ -42,6 +42,17 @@ text-align: center;
 <div class="collapse navbar-collapse">
 <ul class="nav navbar-nav">
 <li class="active"><a href="#">Home</a></li>
+<li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Planning Poker
+        </a>
+        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="https://oceanicfish.github.io/planning_poker/member.html">投票者</a></li>
+                <li><a class="dropdown-item" href="https://oceanicfish.github.io/planning_poker/manager.html">管理者</a></li>
+                <!-- <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item" href="#">And More...</a></li> -->
+        </ul>
+</li>
 <li><a href="#about">About</a></li>
 <li><a href="#contact">Contact</a></li>
 </ul>
