Added nxtPlayer and media_player

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 mx-auto">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="https://oceanicfish.github.io">Home</a>
               </li>
               <li class="nav-item dropdown">
                 <a
@@ -62,6 +62,9 @@
                 </ul>
               </li>
               <li class="nav-item">
+                <a class="nav-link" href="https://oceanicfish.github.io/nxtPlayer/index.html">nxtPlayer</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" href="#">About</a>
               </li>
               <li class="nav-item">
@@ -69,12 +72,7 @@
               </li>
             </ul>
             <div class="d-flex">
-              <a href="#" class="btn btn-light me-2"
-                ><i class="bi bi-question-circle"></i> Help</a
-              >
-              <a href="#" class="btn btn-light"
-                ><i class="bi bi-box-arrow-in-right"></i> Login</a
-              >
+              <a href="#" class="btn btn-light me-2"><i class="bi bi-question-circle"></i> Help</a>
             </div>
           </div>
         </div>
@@ -82,14 +80,14 @@
     </header>
     <!-- Page Content -->
     <div class="container">
-      <div class="row text-center">
+      <div class="row">
         <div class="starter-template mt-5">
-          <h1>{vLab}</h1>
-          <p>
-            <a href="http://getbootstrap.com/getting-started/"
-              >http://oceanicfish.github.io/</a
-            >
-          </p>
+          <div class="row text-center">
+            <h1>{vLab}</h1>
+          </div>
+          <div class="row">
+            <canvas id='gridwormCanvas' width='100%' height='100%' style='background-color: white;' ></canvas>
+          </div>
         </div>
       </div>
       <!-- /.row -->
@@ -98,5 +96,7 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- GridWorm JS -->
+    <script src="resource/js/gridworm.js"></script>
   </body>
 </html>
