Added nxtPlayer and media_player

--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
                 <a class="nav-link" href="https://oceanicfish.github.io/nxtPlayer/index.html">nxtPlayer</a>
               </li>
               <li class="nav-item">
+                <a class="nav-link" href="https://oceanicfish.github.io/media_player/index.html">media_player</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" href="#">About</a>
               </li>
               <li class="nav-item">
